--- a/css/styling.css
+++ b/css/styling.css
@@ -69,7 +69,7 @@ table{
     margin:auto;
     width:100%;
 }
-table a{
+table a, footer a{
     text-decoration: none;
     color:white;
 }
@@ -82,6 +82,9 @@ td{
 }
 .copyright{
     text-align: center;
+}
+a:hover{
+    text-decoration:underline;
 }
 
 
